--- a/free-nodes/2025-4-12-free-node-subscribe.htm
+++ b/free-nodes/2025-4-12-free-node-subscribe.htm
@@ -145,6 +145,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/04/0-20250412.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/2-20250412.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/3-20250412.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/4-20250412.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2025/04/0-20250412.txt</p><p>https://clashgithub.github.io/uploads/2025/04/1-20250412.txt</p><p>https://clashgithub.github.io/uploads/2025/04/2-20250412.txt</p><p>https://clashgithub.github.io/uploads/2025/04/3-20250412.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/04/20250412.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" rel="nofollow noopener" style="color:#c00;">可乐云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日→22.5M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-4-13-free-clash.htm">4月13日→21.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -173,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-87174.htm" title="宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）">宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）</a></li>
-                        <li class="py-2"><a href="/news/article-69986.htm" title="Shell常用脚本：Nginx安装脚本">Shell常用脚本：Nginx安装脚本</a></li>
-                        <li class="py-2"><a href="/news/article-89354.htm" title="宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢">宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢</a></li>
+                        <li class="py-2"><a href="/news/article-85745.htm" title="淮北小动物救助站（淮北小动物救助站电话）">淮北小动物救助站（淮北小动物救助站电话）</a></li>
+                        <li class="py-2"><a href="/news/article-89355.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
                         <li class="py-2"><a href="/news/article-79392.htm" title="国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）">国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）</a></li>
-                        <li class="py-2"><a href="/news/article-66786.htm" title="被猫抓出一点血丝怎么办（被猫抓出了一点血丝）">被猫抓出一点血丝怎么办（被猫抓出了一点血丝）</a></li>
-                        <li class="py-2"><a href="/news/article-73955.htm" title="Git基础Commit对象">Git基础Commit对象</a></li>
-                        <li class="py-2"><a href="/news/article-93062.htm" title="宠物粮市场分析报告范文怎么写（宠物粮市场分析报告范文怎么写的）">宠物粮市场分析报告范文怎么写（宠物粮市场分析报告范文怎么写的）</a></li>
-                        <li class="py-2"><a href="/news/article-68054.htm" title="动物医院主管部门是什么 动物医院主管部门是什么部门">动物医院主管部门是什么 动物医院主管部门是什么部门</a></li>
-                        <li class="py-2"><a href="/news/article-87898.htm" title="宠物店从哪进货的（宠物店货源都从哪里来）">宠物店从哪进货的（宠物店货源都从哪里来）</a></li>
-                        <li class="py-2"><a href="/news/article-76663.htm" title="兰州宠物用品批发进货渠道在哪（兰州宠物用品批发市场在哪里）">兰州宠物用品批发进货渠道在哪（兰州宠物用品批发市场在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-92328.htm" title="被猫抓了有一点血痕（被猫抓了一下有一点点血印子）">被猫抓了有一点血痕（被猫抓了一下有一点点血印子）</a></li>
+                        <li class="py-2"><a href="/news/article-68698.htm" title="宠物医疗许可证多少钱（宠物医疗许可证多少钱办）">宠物医疗许可证多少钱（宠物医疗许可证多少钱办）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe.htm" title="4月12日→21.7M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">4月12日→21.7M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-80085.htm" title="妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）">妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）</a></li>
+                        <li class="py-2"><a href="/news/article-68697.htm" title="Pycharm运行Flask项目指定运行参数">Pycharm运行Flask项目指定运行参数</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-4-shadowrocket-node.htm" title="3月4日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月4日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm" title="4月11日→22.5M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">4月11日→22.5M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">40</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
